<resources>
    <string name="app_name">App Portfolio</string>
    <string name="main_screen_title">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone_my_own_app">Capstone: My own app</string>
    <string name="main_screen_button_toast_text">"This Button will launch "</string>
</resources>
